--- a/1.html
+++ b/1.html
@@ -17,9 +17,7 @@
             </ul>
         </nav>
     </header>
-    <center>
-        <embed src="ورد/alsidiya1.pdf" type="">
-        </center>
+    <iframe src="https://drive.google.com/file/d/14vAohEzCOxCe85Deisro6DDyKwNwR8JP/preview" width="100%" height="600px" allow="autoplay"></iframe>
     <script src="script.js"></script>
     
 </body>
