--- a/3.html
+++ b/3.html
@@ -17,9 +17,7 @@
             </ul>
         </nav>
     </header>
-    <center>
-        <embed src="ورد/رسالة في نسب وشمائل الشيخ سعد الدين.pdf" type="">
-        </center>
+    <iframe src="https://drive.google.com/file/d/12ArKv8plHaACsNjG3hJ6Qzb5eAa0UaE2/preview" width="100%" height="600px" allow="autoplay"></iframe>
     <script src="script.js"></script>
     
 </body>
