--- a/4.html
+++ b/4.html
@@ -17,9 +17,7 @@
             </ul>
         </nav>
     </header>
-    <center>
-        <embed src="ورد/مخطوطه للورد الكبير.pdf" type="">
-        </center>
+    <iframe src="https://drive.google.com/file/d/https://drive.google.com/file/d/1yxA6sVD1j3090drHYPgdj0N2-FUMsypv/view?usp=sharing/preview" width="100%" height="600px" allow="autoplay"></iframe>
     <script src="script.js"></script>
     
 </body>
