--- a/def.html
+++ b/def.html
@@ -17,9 +17,7 @@
             </ul>
         </nav>
     </header>
-    <center>
-        <embed src="ورد/حزب التحصين.pdf" type="">
-        </center>
+    <iframe src="https://drive.google.com/file/d/1cDSnEtY4YBMKDSRHy0KU3JblcrDg88t-/preview" width="100%" height="600px" allow="autoplay"></iframe>
     <script src="script.js"></script>
     
 </body>
