--- a/2.html
+++ b/2.html
@@ -17,9 +17,7 @@
             </ul>
         </nav>
     </header>
-    <center>
-        <embed src="ورد/الطريقة السعدية في بلاد الشام.pdf" type="">
-        </center>
+    <iframe src="https://drive.google.com/file/d/1VbXDI0_ihTns-vzld9tWwqrXNOL72x2K/preview" width="100%" height="600px" allow="autoplay"></iframe>
     <script src="script.js"></script>
     
 </body>
