--- a/5.html
+++ b/5.html
@@ -17,9 +17,7 @@
             </ul>
         </nav>
     </header>
-    <center>
-        <embed src="ورد/كتاب مجموع اوراد الطريقه السعديه الشيبانيه (1).pdf" type="">
-        </center>
+    <iframe src="https://drive.google.com/file/d/1_hr6v825SwfC8EXqKXfeJ4PKnahAYJ1v/preview" width="100%" height="600px" allow="autoplay"></iframe>
     <script src="script.js"></script>
     
 </body>
