--- a/big.html
+++ b/big.html
@@ -17,9 +17,7 @@
             </ul>
         </nav>
     </header>
-    <center>
-        <embed src="ورد/الحزب الكبير.pdf" type="">
-        </center>
+    <iframe src="https://drive.google.com/file/d/1aY7Mw5MkNLi6x_nkk9jdSWlsjJx98WNh/preview" width="100%" height="600px" allow="autoplay"></iframe>
     <script src="script.js"></script>
     
 </body>
