--- a/link.html
+++ b/link.html
@@ -17,9 +17,7 @@
             </ul>
         </nav>
     </header>
-    <center>
-        <embed src="ورد/التوسل.pdf" type="">
-        </center>
+    <iframe src="https://drive.google.com/file/d/112jGgcggC3NPrt50xbsGh7cwP7N_C-_S/preview" width="100%" height="600px" allow="autoplay"></iframe>
     <script src="script.js"></script>
     
 </body>
