--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
     <link rel="icon" href="img/3a79ac.jpg" type="image/png">
 </head>
 <body>
+
     <header>
         <nav>
             <button id="darkModeToggle">🌙</button>
         </nav>
     </header>
+
+<section>
     <div class="container">
         <div class="service-box">
             <a href="">
@@ -36,7 +39,25 @@
             </a>
         </div>
     </div>
+</section>
+<section class="se1">
+        <div class="don">
+            <center>
+                <img class="gep" src="img/3a79ac.jpg" alt="">
+                <h1 class="pip">###</h1>
+                <p class="pipi">#######</p>
+
+        </div>
+                    </center>
+    </section>
+    <footer class="foot" id="foont">
+        <div class="links">
+            <a href="">###</a>
+            <a href="">###</a>
+            <a href="">###</a>
+        </div>
+    </footer>
+
     <script src="script.js"></script>
-    
 </body>
 </html>
